--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    /* background-color: rgb(189, 129, 78); */
+    /* background-color: rgb(107, 93, 93); */
+    color: black;
+}
+body{
+    /* background-color: black; */
+    /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(2,0,36,1) 100%); */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.active{
+    color: red;
+}
+.e-container{
+    width: 80%;
+    
+    margin:  0 auto;
+    margin-top: 50px;
+    display: flex;
+    /* justify-content: center; */
+    
+
+}
+.e-left{
+    width: 40%;
+    background-color: #ECEFF4;
+}
+.e-right{
+    display: flex;
+    align-items: center;
+    width: 60%;
+    padding-left: 20%;
+    background-color: #6070f0;
+    border: solid rgb(166, 166, 166) 1px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.e-right span{
+    /* margin-right: 30px; */
+    /* margin-bottom: 20px; */
+}
+.content h3{
+    margin-bottom: 20px;   
+}
+.content button{
+    width: 150px;
+    background-color: #3a48b1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.e-box{
+    padding: 10px;
+    background-color: #4455DB;
+    cursor: pointer;
+    border: solid rgb(166, 166, 166) 1px;
+}
+.e-active{background-color: #192370;}
+:hover.e-box{
+    background-color: #192370;;
+}
+input{
+    color:black;
 }
 
-.App-link {
-  color: #61dafb;
+.ApiTask{
+width: 80%;
+margin: auto auto;
+margin-top: 70px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table{
+    width: 100%;
+}
+table, th, td {
+  border: 1px solid rgb(150, 150, 150);
+  border-collapse: collapse;
+}
+th{
+     width: 30%;
+     height: 40px;
+     background-color: #008777;
+     color: white;
+} 
+td{
+    width: 30%;
+    height: 40px;
+    text-align: center;
+    /* padding-left: 90px; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: .9rem;
+    color: rgb(83, 83, 83);
+} 
+ tr td:hover{
+
+}
+.intput{
+    /* margin: auto 0; */
+    margin: 15px;
+    width: 300px;
+    height: 20px;
+    border-radius: 5px;
+    border: none;
+    color: rgb(122, 122, 122);
+    padding: 10px;
+    background-color:#D9D9D9;
+}
+.pageBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:20px;
+}
+.pagebtn{
+    color: black;
+    margin: 10px;
+}
+.pageNumBtn{
+    padding: 5px 10px;
+    background-color: #008777;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    margin: 10px;
+}
+.active{
+    padding: 5px 10px;
+    background-color: rgb(83, 83, 83);
+    color: white;
+    border: none;
+    border-radius: 3px;
+    margin: 10px;
 }
